Adds filtered client portfolio report
Implements the functionality to generate a detailed client portfolio report with optional filters for account type and state.

This allows users to retrieve CCP accounts for a specific bureau, applying filters
for account type and state, and calculates portfolio statistics.

Also, this commit includes some minor refactoring, such as renaming variables for clarity and adding transactional annotations for data consistency.